--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cached_network_image: ^2.0.0
   flutter_svg: ^0.20.0-nullsafety.3
   flutter_staggered_grid_view: 0.3.0
+  flutter_pagewise: ^2.0.1
 
 
 dev_dependencies:
